[gd_scene load_steps=21 format=2]

[ext_resource path="res://src/ui/Menu.gd" type="Script" id=1]
[ext_resource path="res://src/ui/Saves.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/arial.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/ui/Options.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sfx/select.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sfx/swap.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 1, 1, 1, 0.196078 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0.403922, 0.972549, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 1, 1, 1, 1 )
border_width_top = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0 )
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 0 )
border_width_bottom = 1
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0509804, 0.0509804, 0.0509804, 0.392157 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.0509804, 0.0509804, 0.0509804, 0.392157 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id=3]
Button/fonts/font = SubResource( 4 )
Button/styles/focus = SubResource( 6 )
Button/styles/normal = SubResource( 2 )
Button/styles/pressed = SubResource( 7 )
HSlider/styles/grabber_area = SubResource( 15 )
HSlider/styles/grabber_area_highlight = SubResource( 15 )
HSlider/styles/slider = SubResource( 14 )
LineEdit/styles/focus = SubResource( 9 )
LineEdit/styles/normal = SubResource( 8 )
OptionButton/styles/focus = SubResource( 13 )
OptionButton/styles/normal = SubResource( 10 )
OptionButton/styles/pressed = SubResource( 13 )
PanelContainer/styles/panel = SubResource( 5 )
PopupMenu/styles/hover = SubResource( 12 )
PopupMenu/styles/panel = SubResource( 11 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="Buttons" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
margin_left = 486.0
margin_top = 247.0
margin_right = 594.0
margin_bottom = 472.0
custom_constants/separation = 20

[node name="Resume" type="Button" parent="Buttons/VBoxContainer"]
margin_right = 108.0
margin_bottom = 29.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../Save")
mouse_filter = 2
text = "%RESUME%"

[node name="Save" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 49.0
margin_right = 108.0
margin_bottom = 78.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../Resume")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../Load")
mouse_filter = 2
text = "%SAVE%"

[node name="Load" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 98.0
margin_right = 108.0
margin_bottom = 127.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../Save")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../Config")
mouse_filter = 2
text = "%LOAD%"

[node name="Config" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 147.0
margin_right = 108.0
margin_bottom = 176.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../Load")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../Exit")
mouse_filter = 2
text = "%CONFIG%"

[node name="Exit" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 196.0
margin_right = 108.0
margin_bottom = 225.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../Config")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../Resume")
mouse_filter = 2
text = "%EXIT%"

[node name="Saves" parent="." instance=ExtResource( 2 )]
margin_left = 1080.0
margin_right = 1080.0

[node name="Options" parent="." instance=ExtResource( 4 )]
margin_left = 1080.0
margin_right = 1080.0

[node name="Swap" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="focus_entered" from="Buttons/VBoxContainer/Resume" to="." method="_swap"]
[connection signal="pressed" from="Buttons/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="focus_entered" from="Buttons/VBoxContainer/Save" to="." method="_swap"]
[connection signal="pressed" from="Buttons/VBoxContainer/Save" to="." method="_selected"]
[connection signal="pressed" from="Buttons/VBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="focus_entered" from="Buttons/VBoxContainer/Load" to="." method="_swap"]
[connection signal="pressed" from="Buttons/VBoxContainer/Load" to="." method="_selected"]
[connection signal="pressed" from="Buttons/VBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="focus_entered" from="Buttons/VBoxContainer/Config" to="." method="_swap"]
[connection signal="pressed" from="Buttons/VBoxContainer/Config" to="." method="_selected"]
[connection signal="pressed" from="Buttons/VBoxContainer/Config" to="." method="_on_Options_pressed"]
[connection signal="focus_entered" from="Buttons/VBoxContainer/Exit" to="." method="_swap"]
[connection signal="pressed" from="Buttons/VBoxContainer/Exit" to="." method="_selected"]
[connection signal="pressed" from="Buttons/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="cancel_pressed" from="Saves" to="." method="_on_Saves_cancel_pressed"]
[connection signal="save_loaded" from="Saves" to="." method="_on_Saves_save_loaded"]
[connection signal="cancel_pressed" from="Options" to="." method="_on_Options_cancel_pressed"]
